--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -14,6 +14,12 @@
     margin-right: 35px;
 }
 
+#img-user{
+    height: 40px !important;
+    /* margin-left: 35px;
+    margin-right: 5px; */
+}
+
 .nav-link{
     color: #94ed8888 !important;
 }
