--- a/API/covtracker/src/main/resources/static/style.css
+++ b/API/covtracker/src/main/resources/static/style.css
@@ -27,7 +27,7 @@
 .container{
     box-shadow: 0px 0px 3px #ccc;
     min-height: auto;
-    padding-bottom: 20px;
+    padding: 20px;    
     margin-bottom: 5px;
     margin-top: 5px;
     background-color: rgba(0, 0, 0, 0.7);
