--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -29,6 +29,10 @@
     border-color: #94ed883f !important;
 }
 
+.dropdown-item:focus{
+    color: #94ed8888 !important;
+}
+
 .btn-lg:focus {
     box-shadow: 0px 0px 15px  #94ed883f !important;
   }
