--- a/API/covtracker/src/main/resources/static/usuario.css
+++ b/API/covtracker/src/main/resources/static/usuario.css
@@ -23,8 +23,8 @@ p {
 }
 
 .usuario-card {
-  padding: 10px;
-  border-radius: 5px;
+  padding: 15px;
+  box-shadow: 1px 1px 3px #555;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -34,4 +34,22 @@ p {
 .usuario-card img {
   height: 75px;
   flex: 0;
+}
+
+.usuario-detalhes-wrapper {
+  margin: 15px 0 10px 0;
+  box-shadow: 1px 1px 7px #454545;
+  padding: 15px;
+  border-radius: 5px;
+}
+
+.usuario-detalhes-wrapper h3 {
+  width: fit-content;
+  border-bottom: 3px solid white;
+  margin-bottom: 10px;
+}
+
+.usuario-detalhes {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
