--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -44,6 +44,20 @@ body {
   color: white !important;
 }
 
+.modal-backdrop {
+  display: none !important;
+}
+
+.modal {
+  background: rgba(0,0,0,0.5) !important;
+}
+
+.dropdown-item:active {
+  background-color: #94ed8888 !important;
+  border-color: #94ed883f !important;
+  color: white !important;
+}
+
 .btn-lg:focus {
   box-shadow: 0px 0px 15px #94ed883f !important;
 }
