--- a/src/main/resources/static/usuario.css
+++ b/src/main/resources/static/usuario.css
@@ -107,12 +107,45 @@ p {
 
 .cards-header {
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
   font-size: 26px;
   background-color: #ddd;
   transition: all 200ms;
   color: #000000;
+}
+
+.cards-header button {
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  width: auto;
+  height: 100%;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  transition: 200ms;
+  border: 1px solid transparent;
+  padding: 3px;
+  border-radius: 50%;
+  background-color: transparent;
+}
+
+.cards-header button:hover {
+  border: 1px solid #454545;
+  background-color: #ddd;
+}
+
+.cards-header button img {
+  vertical-align: unset;
+  object-fit: contain;
+  height: 100%;
+}
+
+.custom-table {
+  width: 100%;
+  text-align: center;
 }
 
 @media (max-width: 990px) {
